--- a/index.ipynb
+++ b/index.ipynb
@@ -270,8 +270,8 @@
     }
    ],
    "source": [
-    "import plotly\n",
-    "plotly.offline.init_notebook_mode(connected=True)\n",
+    "#import plotly\n",
+    "#plotly.offline.init_notebook_mode(connected=True)\n",
     "# we repeat these first lines just to keep the code together  \n",
     "\n",
     "trace0 = dict(x=[4, 1, 5, 6, 3, 2], y=[8, 11, 8, 13, 6, 4])\n",
