automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -271,7 +271,7 @@
    ],
    "source": [
     "import plotly\n",
-    "plotly\n",
+    "plotly.offline.init_notebook_mode(connecte)\n",
     "#import plotly\n",
     "#plotly.offline.init_notebook_mode(connected=True)\n",
     "# we repeat these first lines just to keep the code together  \n",
