--- a/index.ipynb
+++ b/index.ipynb
@@ -273,6 +273,7 @@
     "import plotly\n",
     "plotly.offline.init_notebook_mode(connected=True)\n",
     "trace0= dict(x=[4,1,5,6,3,2], y=[8,11,8,13,6,4])\n",
+    "plotly.offline.iplot([trace0])\n",
     "#import plotly\n",
     "#plotly.offline.init_notebook_mode(connected=True)\n",
     "# we repeat these first lines just to keep the code together  \n",
