--- a/index.ipynb
+++ b/index.ipynb
@@ -350,7 +350,8 @@
     }
    ],
    "source": [
-    "trace1 = dict(x=[4, 1, 5, 6, 3, 2],\n",
+    "trace1= dict\n",
+    "#trace1 = dict(x=[4, 1, 5, 6, 3, 2],\n",
     "              y=[8, 11, 8, 13, 6, 4], \n",
     "              mode=\"markers\", \n",
     "              text=[\"bob\", \"suzie\", \"fred\", \"edgar\", \"steven\", \"natalie\"],)\n",
