--- a/index.ipynb
+++ b/index.ipynb
@@ -352,7 +352,8 @@
    "source": [
     "trace1= dict(x=[4,1,5,6,3,2],\n",
     "            y=[8,11,8,13,6,4],\n",
-    "            mode)\n",
+    "            mode=\"markers\",\n",
+    "            text=[bob,])\n",
     "#trace1 = dict(x=[4, 1, 5, 6, 3, 2],\n",
     "              y=[8, 11, 8, 13, 6, 4], \n",
     "              mode=\"markers\", \n",
