--- a/index.ipynb
+++ b/index.ipynb
@@ -353,7 +353,7 @@
     "trace1= dict(x=[4,1,5,6,3,2],\n",
     "            y=[8,11,8,13,6,4],\n",
     "            mode=\"markers\",\n",
-    "            text=[bob,])\n",
+    "            text=[bob, \"suzie\", \"fred\", \"edgar\", \"steven\"])\n",
     "#trace1 = dict(x=[4, 1, 5, 6, 3, 2],\n",
     "              y=[8, 11, 8, 13, 6, 4], \n",
     "              mode=\"markers\", \n",
