--- a/index.ipynb
+++ b/index.ipynb
@@ -355,13 +355,14 @@
     "            mode=\"markers\",\n",
     "            text=[bob, \"suzie\", \"fred\", \"edgar\", \"steven\", \"natalie\"])\n",
     "plotly.offline.iplot([trace1])\n",
+    "\n",
     "#trace1 = dict(x=[4, 1, 5, 6, 3, 2],\n",
-    "              y=[8, 11, 8, 13, 6, 4], \n",
-    "              mode=\"markers\", \n",
-    "              text=[\"bob\", \"suzie\", \"fred\", \"edgar\", \"steven\", \"natalie\"],)\n",
+    "             # y=[8, 11, 8, 13, 6, 4], \n",
+    "             # mode=\"markers\", \n",
+    "             # text=[\"bob\", \"suzie\", \"fred\", \"edgar\", \"steven\", \"natalie\"],)\n",
     "\n",
     "\n",
-    "plotly.offline.iplot([trace1])\n",
+    "#plotly.offline.iplot([trace1])\n",
     "\n",
     "# much better :)"
    ]
